# StructuredPy

./: .gitignore  .nojekyll  README.md  _quarto.yml  hello.py  index.html  index.qmd  intro.html  preface.html  preface.qmd  pyproject.toml  references.bib  search.json
.github/: README.md
.github/workflows/: main.yml  test.yml
_book/: index.html  intro.html  preface.html  references.html  search.json  summary.html
_book/appendices/: python_basics.html  resources.html  setup_guide.html
_book/chapters/: 01-timeseries-functions.html  02-timeseries-classes.html  03-device-functions.html  04-device-classes.html  05-api-basics.html  06-api-complete.html
_book/site_libs/bootstrap/: bootstrap-bd8d6e7652644ce174ce63f363a4d09e.min.css
appendices/: python_basics.html  python_basics.qmd  setup_guide.qmd
chapters/: 01-timeseries-functions.qmd  01-timeseries-functions.quarto_ipynb  0101-initial-setting-and-tutorial.html  0101-initial-setting-and-tutorial.qmd  0102-project-initialization.html  0102-project-initialization.qmd  0103-workflow.html  0103-workflow.qmd  02-timeseries-classes.qmd  03-device-functions.qmd  04-device-classes.qmd  05-api-basics.qmd  06-api-complete.qmd
code/timeseries/data/: sensor_data.csv
docs/: search.json  style.css
intro_files/libs/bootstrap/: bootstrap-d94d4ebf4f94ba7212512caf4c329029.min.css
site_libs/bootstrap/: bootstrap-8615be725763f0258162ed5dec249639.min.css
