[project]
name = "structuredpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "cairosvg>=2.7.1",
    "flake8>=7.1.1",
    "ipympl>=0.9.5",
    "ipython>=8.31.0",
    "jupyter-client>=8.6.3",
    "jupyterlab>=4.3.4",
    "jupytext>=1.16.6",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pnglatex>=1.1",
    "pynvim>=0.5.2",
    "pyperclip>=1.9.0",
    "pyright>=1.1.391",
    "quarto-cli>=1.6.39",
    "ruff>=0.8.4",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "sphinx>=8.1.3",
]

[tool.uv.workspace]
members = ["code/tutorial"]
